-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 18.0.0
-
None
-
9853d8767 (master)
Steps to reproduce:
- Create a simple test project
- Create a second, "Custom Executable" Run config (set it to run "ls -lach" for instance)
- Quit and Start Qt Creator again
- Re-open the project, check that "Run Settings" still points to the Custom executable
- Change the active run setting to the actual binary
- Quit and Start Qt Creator again
- Re-open the project
- Check which Run Setting is selected
Expected:
- The actual binary is selected
Actual:
- The Custom executable is selected
Seems to be a side effect of the Target / Build / Run Settings refactoring as the ActiveRunConfiguration is now stored twice as well, but I gave up investigating at that point.