ProjectExplorer: Leave the active run configuration alone

Just because it currently has no parse data (which is normally the case
right after loading a project), doesn't mean it shouldn't be the active
run config anymore.

Fixes: QTCREATORBUG-33429
Change-Id: I2b1a81b75bcd4afa6a273ddde8804e5acf821935
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>